--- a/app/views/donate/edit.html.erb
+++ b/app/views/donate/edit.html.erb
@@ -1,2 +1,88 @@
-<h1>Donate#edit</h1>
-<p>Find me in app/views/donate/edit.html.erb</p>
+<!-- MAIN CONTENT -->
+<section class="slice slice-lg bg-image" style="background: url(/images/patterns/squairy-light.png) repeat fixed !important;">
+    <div class="wp-section">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-md-offset-1 col-sm-5 col-sm-offset-1">
+            	<div class="row">
+            		
+		<div class="col-md-12">
+
+		<div class="wp-block default user-form no-margin">
+            <div class="form-header">
+                <h1>Donate Your Unused Gift Card</h2>
+
+                <% if session[:user_firstname] == nil %>
+                    <p style="text-align:center">
+                        <br/>
+                        Please login, so you can enjoy the benefits of being a member of Changefindr.com.  You will be able to check gift card balance instantly, view the history of your donations, print your tax receipt, and automatically be joined in our rewards program.  <a href="/sign_in/index">Login Here</a>
+                        
+                        <h4 style="text-align:center">OR</h4>
+                        
+                    </p>
+                        <p style="text-align:center">Continue as guest</p>
+                        
+                       
+                <% end %>
+
+            </div>
+
+	      <div class="form-body">
+
+
+
+            <%= form_for(@donation, :url => {:action => 'update'}, :html => {:class => 'sky-form', :id => "myform"}, :method => :POST) do |f| %>
+
+               <%= render(:partial => "donation_form", :locals => {:f => f}) %>
+
+<br/><br/>
+                                <button id="donation_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button"
+                                onClick="this.form.submit(); this.disabled=true;"
+                                >
+                                    <span>Update Donation</span>
+                                </button>
+
+            <!--/form-->
+            	<% end %>  
+        		</div>
+    </div>
+		 </div>
+
+	       		 
+	    </div>
+            </div>
+            <div class="col-md-4">
+            	
+
+                <!-- SIDEBAR -->
+                <div class="sidebar">
+
+                    <div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
+                        <div class="wp-block default">
+                        <div class="figure">
+                            <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@donation.charity.logo.url%>" class="img-responsive center-block"
+                                            style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" 
+                                            >     
+                        </div>
+                        <div class="wp-block-body">
+                            <h2 class="title" id=""><%= @donation.charity.charityname %></h2>
+                            <a href="/cause/show/<%= @donation.charity.charityid %>">About Cause</a>
+                            <p></p>
+                        </div>
+                    </div>
+                    </div>
+        
+                    
+                    <%= render partial: "widgets/merchantselectedlogo.html.erb" %> 
+
+                
+
+                </div> 
+            	               
+			</div>
+        </div>
+    </div>
+</div>
+</section>
+
+
